4.ingress-nginx/domain-based-routing/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: vault
  namespace: vault
spec:
  rules:
  - host: vault.simplifydevopstools.com
    http:
      paths:
      - backend:
          service:
            name: vault-ui
            port:
              number: 8200
        path: /
        pathType: Prefix
